fix : z-index Aubert

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -387,7 +387,7 @@ html {
     background-color: var(--navbar-background);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.20);
     animation: navbar-enter .3s ease-in-out forwards;
-    z-index: 1;
+    z-index: 10;
 }
 
 .navbar--open+.js-navbar-placeholder {
